[tool.poetry]
name = "leveelogic"
version = "0.5.0"
description = "The toolkit for levee assessments by LeveeLogic"
authors = ["Rob van Putten <leveelogic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
d-geolib = "^1.3.3"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
pyproj = "^3.6.1"
simplejson = "^3.19.2"
pytest = "^7.4.3"
shapely = "^2.0.2"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
