[tool.poetry]
name = "leveelogic"
version = "0.5.4"
description = "The toolkit for levee assessments by LeveeLogic"
authors = ["Rob van Putten <leveelogic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
pyproj = "^3.6.1"
simplejson = "^3.19.2"
pytest = "^7.4.3"
shapely = "^2.0.2"
coverage = "^7.3.2"
anvil-uplink = "^0.4.2"
xmltodict = "^0.13.0"
pydantic = "1.10.13"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
zipp = "^3.17.0"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
